@@ -1,3 +1,7 @@
+2010-01-06  Daniel Macks  <dmacks@netspace.org>
+
+	* inject.pl, install.sh, postinstall.pl.in: update copyright
+
 2009-08-10  Daniel Macks  <dmacks@netspace.org>
 
 	* install.sh: it wasn't actually *installing* the postgresql
